# HekaTerm

./: .gitignore  Cargo.toml  README.md  add_parking_lot.py  apply_clippy.py  ascii-stats.txt  bench_memory.sh  bench_throughput.sh  clippy.json  perf-memory-idle.txt  run_perf.sh  sim_input.py  sim_input.sh  soak_test.sh  startup_baseline.txt  test_gov.rs  tracing_latency.txt  track_rss.py  wezterm_ascii_stats_opt.txt  wezterm_log.txt  wezterm_memory_profile.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  nix-update-flake.yml  nix.yml  nix_continuous.yml  pages.yml  verify-pages.yml
.modernization2/: 00_CONTEXT.md  01_TODO.md  02_TODO.md  todo.md
.modernization3/: 00_CONTEXT.md  todo.md
async_ossl/: Cargo.toml
async_ossl/src/: lib.rs
base91/: Cargo.toml
base91/src/: lib.rs
bidi/: Cargo.toml
bidi/generate/: Cargo.toml
bidi/src/: direction.rs  level.rs  level_stack.rs  lib.rs
bintree/: Cargo.toml
bintree/src/: lib.rs
ci/: check-rust-version.sh  create-release.sh  deploy.sh  make-flathub-pr.sh  make-winget-pr.sh
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
config/: Cargo.toml
config/derive/: Cargo.toml
config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  wsl.rs
docs/: book.toml  mkdocs-base.yml
env-bootstrap/: Cargo.toml
env-bootstrap/src/: lib.rs  ringlog.rs
filedescriptor/: Cargo.toml
filedescriptor/src/: lib.rs  unix.rs  windows.rs
frecency/: Cargo.toml
frecency/src/: lib.rs
lfucache/: Cargo.toml
lfucache/src/: lib.rs
lua-api-crates/battery/: Cargo.toml
lua-api-crates/color-funcs/: Cargo.toml
lua-api-crates/filesystem/: Cargo.toml
lua-api-crates/filesystem/src/: lib.rs
lua-api-crates/logging/: Cargo.toml
lua-api-crates/mux/: Cargo.toml
lua-api-crates/plugin/: Cargo.toml
lua-api-crates/procinfo-funcs/: Cargo.toml
lua-api-crates/serde-funcs/: Cargo.toml
lua-api-crates/share-data/: Cargo.toml
lua-api-crates/spawn-funcs/: Cargo.toml
lua-api-crates/ssh-funcs/: Cargo.toml
lua-api-crates/termwiz-funcs/: Cargo.toml
lua-api-crates/time-funcs/: Cargo.toml
lua-api-crates/url-funcs/: Cargo.toml
lua-api-crates/window-funcs/: Cargo.toml
luahelper/: Cargo.toml
luahelper/src/: enumctor.rs  lib.rs
mux/: Cargo.toml
mux/src/: client.rs  connui.rs  domain.rs  lib.rs  localpane.rs  pane.rs  renderable.rs  ssh.rs  ssh_agent.rs  tab.rs  (+5 more)
procinfo/: Cargo.toml
promise/: Cargo.toml
pty/: Cargo.toml
rangeset/: Cargo.toml
ratelim/: Cargo.toml
strip-ansi-escapes/: Cargo.toml
strip-ansi-escapes/src/: main.rs
sync-color-schemes/: Cargo.toml
tabout/: Cargo.toml
tabout/src/: lib.rs
term/: Cargo.toml
termwiz/: Cargo.toml
umask/: Cargo.toml
umask/src/: lib.rs
vtparse/: Cargo.toml
vtparse/benches/: vtparse_bench.rs
vtparse/src/: lib.rs  simd.rs  transitions.rs
wezterm/: Cargo.toml
wezterm-blob-leases/: Cargo.toml
wezterm-cell/: Cargo.toml
wezterm-char-props/: Cargo.toml
wezterm-client/: Cargo.toml
wezterm-dynamic/: Cargo.toml
wezterm-escape-parser/: Cargo.toml
wezterm-font/: Cargo.toml
wezterm-gui/: Cargo.toml  build.rs
wezterm-gui-subcommands/: Cargo.toml
wezterm-input-types/: Cargo.toml
wezterm-input-types/src/: lib.rs
wezterm-mux-server/: Cargo.toml
wezterm-mux-server-impl/: Cargo.toml
wezterm-open-url/: Cargo.toml
wezterm-ssh/: Cargo.toml
wezterm-surface/: Cargo.toml
wezterm-toast-notification/: Cargo.toml
wezterm-uds/: Cargo.toml
wezterm-uds/src/: lib.rs
wezterm-version/: Cargo.toml  build.rs
window/: Cargo.toml  build.rs
(+374 files in other folders)
