[package]
name = "async_ossl"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2024"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
async-io.workspace = true

[target.'cfg(not(any(windows, target_os="macos")))'.dependencies]
openssl.workspace = true

[target.'cfg(any(windows, target_os="macos"))'.dependencies]
openssl = { workspace = true, features=["vendored"] }

