[package]
name = "tabout"
version = "0.3.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2024"
repository = "https://github.com/YatogamiRaito/HekaTerm"
description = "Tabulate output for CLI programs"
license = "MIT"
documentation = "https://docs.rs/tabout"

[dependencies]
parking_lot.workspace = true
termwiz.workspace = true
