[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "vtparse"
version = "0.7.0"
edition = "2024"
repository = "https://github.com/YatogamiRaito/HekaTerm"
description = "Low level escape sequence parser"
license = "MIT"
documentation = "https://docs.rs/vtparse"
keywords = ["terminal", "escape", "ansi", "sequence", "parser"]
readme = "README.md"

[features]
default = ["std"]
alloc = []
std = []
no_std = ["dep:heapless"]

[dependencies]
parking_lot.workspace = true
heapless = {workspace = true, optional = true }
smallvec.workspace = true
utf8parse.workspace = true

[dev-dependencies]
k9.workspace = true
criterion.workspace = true

[[bench]]
name = "vtparse_bench"
harness = false
