[package]
name = "wezterm-uds"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/YatogamiRaito/HekaTerm"
description = "Portable unix domain sockets"
license = "MIT"
documentation = "https://docs.rs/wezterm-uds"

[dependencies]
parking_lot.workspace = true
async-io.workspace = true
uds_windows.workspace = true
