[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
anyhow.workspace = true
config.workspace = true
filenamegen.workspace = true
luahelper.workspace = true
smol.workspace = true
